# pygram11

./: .build.yml  .clang-format  .dir-locals.el  .gitignore  .gitmodules  .readthedocs.yml  CMakeLists.txt  LICENSE  MANIFEST.in  README.md  azure-pipelines.yml  pyproject.toml  requirements.txt  setup.cfg  setup.py
.builds/: arch.yml  conda.yml  debian.yml  fedora.yml
.ci/: azure-steps.yml
.ci-scripts/: srht-pypi.py
.github/workflows/: build.yml  ci.yml  libomp.rb
docs/: api.rst  api_reference.rst  bench.rst  conf.py  examples.md  examples.rst  index.rst  omp.md  omp.rst  overview.rst  purpose.md  purpose.rst  quick.rst  req.rst  requirements.txt  rtd_requirements.txt  why.md  why.rst
docs/_static/: custom.css
docs/api/: bin_centers.rst  bin_edges.rst  config.rst  disable_omp.rst  fix1d.rst  fix1dmw.rst  fix2d.rst  force_omp.rst  histogram.rst  histogram2d.rst  numpylike.rst  omp.rst  omp_cnd.rst  omp_conv.rst  pygramspecific.rst  utils.rst  var1d.rst  var1dmw.rst  var2d.rst
extras/: README.md  quicktest.py  speed.py  speed_var.py
pygram11/: __init__.py  _backend.cpp  _backend_pb.cpp  _backend_pb_2d.cpp  _backend_pb_obj.cpp  _core.cpp  _core.hpp  _core1d.hpp  _core2d.hpp  _helpers.hpp  _obj.cpp  _utils.h  _utils.hpp  hist.py  histogram.py  utils.py  version.py
src/: _backend.cpp  _backend1d.cpp  _backend2d.cpp  _backendobj.cpp  _helpers.hpp  _old_backend.cpp
src/pygram11/: __init__.py  _bh.py  _dask.py  _helpers.py  _hist.py  _misc.py  _numpy.py  config.py  hist.py  misc.py
tests/: test_bh.py  test_dask.py  test_helpers.py  test_hist.py  test_histogram.py  test_misc.py  test_onedim.py  test_onedim_mw.py  test_pygram11.py  test_thresholds.py  test_twodim.py
tests/data/: test_data.npz
utils/: .gitignore  README.md  benchmark.py  macosx-wheels.sh  manylinux-wheels.sh  manylinux1-wheels.sh  manylinux2010-wheels.sh  mwt.py  plot.py  plot_var.py  speed.py
