# [build-system]
# requires = [
#   "setuptools>=45",
#   "setuptools_scm[toml]>=4.2.0",
#   "scikit-build",
#   "cmake",
#   "ninja; platform_system!='Windows'"
# ]
# build-backend = "setuptools.build_meta"

[build-system]
requires = ["scikit-build-core"]
build-backend = "scikit_build_core.build"

[project]
name = "pygram11"
version = "0.13.2"
readme = "README.md"
description = "Fast histogramming in Python built on pybind11 and OpenMP."
authors = [
    { name = "Doug Davis", email = "ddavis@ddavis.io" },
]
maintainers = [
    { name = "Doug Davis", email = "ddavis@ddavis.io" },
]
requires-python = ">=3.8"
dependencies = ["numpy"]
classifiers = [
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: C++",
    "Operating System :: Unix",
    "Operating System :: MacOS",
    "Operating System :: POSIX",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Microsoft :: Windows",
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Science/Research",
    "Development Status :: 6 - Mature",
]

[tool.pytest.ini_options]
norecursedirs = ["extern"]
testpaths = ["tests"]
addopts = [
    "-v",
    "-ra",
    "--showlocals",
    "--strict-markers",
    "--strict-config",
]

[tool.cibuildwheel]
skip = "pp* cp27* cp35* cp36* cp37* *-manylinux_i686 *-musllinux_i686"
manylinux-x86_64-image = "manylinux2014"

test-command = "pytest {package}/tests"
test-skip = "pp*macos* *universal2:arm64"
test-requires = ["pytest", "numpy"]
