[build-system]
requires = ["scikit-build-core"]
build-backend = "scikit_build_core.build"

[project]
name = "pygram11"
version = "0.13.3"
readme = "README.md"
description = "Fast histogramming in Python built on pybind11 and OpenMP."
authors = [
    { name = "Doug Davis", email = "ddavis@ddavis.io" },
]
maintainers = [
    { name = "Doug Davis", email = "ddavis@ddavis.io" },
]
requires-python = ">=3.11"
dependencies = ["numpy"]
classifiers = [
    "Programming Language :: C++",
    "Operating System :: Unix",
    "Operating System :: MacOS",
    "Operating System :: POSIX",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Microsoft :: Windows",
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Science/Research",
    "Development Status :: 6 - Mature",
]

[tool.pytest.ini_options]
norecursedirs = ["extern"]
testpaths = ["tests"]
addopts = [
    "-v",
    "-ra",
    "--showlocals",
    "--strict-markers",
    "--strict-config",
]

[tool.cibuildwheel]
skip = ["pp*", "gp*", "cp38*", "cp39*", "cp310*", "*-manylinux_i686", "*-musllinux_i686"]
manylinux-x86_64-image = "manylinux2014"
test-command = "pytest {package}/tests"
test-skip = "pp*macos* *universal2:arm64"
test-requires = ["pytest", "numpy"]

[tool.ruff]
line-length = 92

[dependency-groups]
dev = [
    "pytest>=8.4.1",
]
