[metadata]
name = pygram11
author = Doug Davis
author_email = ddavis@ddavis.io
maintainer = Doug Davis
maintainer_email = ddavis@ddavis.io
url = https://github.com/douglasdavis/pygram11
description = Fast histogramming in Python built on pybind11 and OpenMP.
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT License
classifiers =
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: C++
    Operating System :: Unix
    Operating System :: MacOS
    Operating System :: POSIX
    Operating System :: POSIX :: Linux
    License :: OSI Approved :: MIT License
    Development Status :: 4 - Beta
    Intended Audience :: Science/Research

[options]
python_requires = >=3.7
packages = find:
package_dir =
    =src
install_requires =
    numpy >=1.16

[options.packages.find]
where = src
exclude =
    tests
    extern
